# indexing-elasticsearch-tokenizer

./: README.md  pyproject.toml
es_indexing/: main.py
src/: utils.py
